# cv_rovi

./: .gitignore  README.md
Lecture1/: main  main.cpp
final_project/: main.cpp
lecture2/: main  main.cpp
lecture3/src/: .floo  CMakeLists.txt  ex3  ex3.cpp
lecture6/: main.cpp
lecture7/: main.cpp
mandatory1/: .floo  main  main.cpp
rovi2_lecture5/: CMakeLists.txt  PointCloudExercise.cpp
