cmake_minimum_required(VERSION 2.8)
project( PlaneFitting )
find_package( OpenCV REQUIRED )
find_package(PCL 1.4 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_executable( PointCloudExercise PointCloudExercise.cpp )
target_link_libraries( PointCloudExercise ${PCL_LIBRARIES} ${OpenCV_LIBS} )
